# mod_openai_realtime

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile.ci  README.md  base64.cpp  base64.h  mod_openai_audio_stream.c  mod_openai_audio_stream.h  openai_audio_streamer_glue.cpp  openai_audio_streamer_glue.h
.github/workflows/: code-checks.yml
